Update to host new home page

--- a/site/projects.html
+++ b/site/projects.html
@@ -47,35 +47,8 @@
 
     <hr />
 
-    <h2>Social Media</h2>
-
-    <ul>
-      <li><a href="https://bsky.app/profile/rekyuu.bsky.social" target="_blank">Bluesky</a></li>
-      <li><a href="https://www.fflogs.com/character/id/15571463" target="_blank">FF Logs</a></li>
-      <li><a href="https://github.com/rekyuu" target="_blank">Github</a></li>
-      <li><a href="https://www.speedrun.com/user/rekyuu" target="_blank">Speedrun.com</a></li>
-      <li><a href="https://steamcommunity.com/id/rekyuus" target="_blank">Steam</a></li>
-      <li><a href="https://www.twitch.tv/rekyuus" target="_blank">Twitch</a></li>
-      <li><a href="https://www.youtube.com/channel/UCbuPqSJCuixlGvsk2WPVYEA" target="_blank">YouTube</a></li>
-    </ul>
-
-    <br />
-
-    <hr />
-
-    <h2>Contact Me</h2>
-
-    <ul>
-      <li>Discord: <a href="https://discordapp.com/users/107977662680571904" target="_blank">@rekyuu</a></li>
-      <li>Email: <a href="mailto:senkan.re.kyuu@gmail.com" target="_blank">senkan.re.kyuu@gmail.com</a></li>
-    </ul>
-
-    <br />
-
-    <hr />
-
-    <br />
-
-    <a href="https://www.pokemon.jp/special/project_eevee/" target="_blank"><img src="img/banners/eevee.gif" /></a>
+    <h2>Projects</h2>
+    
+    <p>Under construction...</p>
   </body>
 </html>
