--- a/site/index.html
+++ b/site/index.html
@@ -50,7 +50,7 @@
     <h2>Social Media</h2>
 
     <ul>
-      <li><a href="https://bsky.app/profile/rekyuu.bsky.social" target="_blank">Bluesky</a></li>
+      <li><a href="https://bsky.app/profile/rekyuu.riichi.me" target="_blank">Bluesky</a></li>
       <li><a href="https://www.fflogs.com/character/id/15571463" target="_blank">FF Logs</a></li>
       <li><a href="https://github.com/rekyuu" target="_blank">Github</a></li>
       <li><a href="https://www.speedrun.com/user/rekyuu" target="_blank">Speedrun.com</a></li>
